Fixed minor layout issues

--- a/src/app/dev/DevToys.Blazor/Components/Layout/SplitGrid/SplitGrid.razor.scss
+++ b/src/app/dev/DevToys.Blazor/Components/Layout/SplitGrid/SplitGrid.razor.scss
@@ -1,7 +1,11 @@
-.grid-split-gripper {
-    display: flex;
+.split-grid {
+    height: inherit;
 
-    &:hover, &:active {
-        background-color: var(--subtle-fill-secondary);
+    &-gripper {
+        display: flex;
+
+        &:hover, &:active {
+            background-color: var(--subtle-fill-secondary);
+        }
     }
 }
