--- a/src/app/dev/DevToys.Blazor/Pages/SubPages/ToolPage.razor.scss
+++ b/src/app/dev/DevToys.Blazor/Pages/SubPages/ToolPage.razor.scss
@@ -1,6 +1,7 @@
 .tool-page {
     &-content {
         padding: 40px;
+        height: inherit;
     }
 }
 
